roles and cards for rooms

--- a/SlunchevIzgrev/Views/Reservations/Details.cshtml
+++ b/SlunchevIzgrev/Views/Reservations/Details.cshtml
@@ -26,7 +26,7 @@
             @Html.DisplayNameFor(model => model.Users)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Users.Id)
+            @Html.DisplayFor(model => model.Users.UserName)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Rooms)
