--- a/SlunchevIzgrev/Views/Rooms/Details.cshtml
+++ b/SlunchevIzgrev/Views/Rooms/Details.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayNameFor(model => model.Photos)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Photos)
+            <img src="@Html.DisplayFor(modelItem => Model.Photos)" width="100">
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PricePerDay)
@@ -49,6 +49,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
+    @if(User.IsInRole("Admin"))
+    {
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a>
+    }
     <a asp-action="Index">Back to List</a>
 </div>
