--- a/SlunchevIzgrev/Views/Home/Index.cshtml
+++ b/SlunchevIzgrev/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div style="margin-top:100px;">
+    <h1 class="display-4" style="margin-left:400px;">ХОТЕЛ</h1>
+    <h1 class="display-4" style="margin-left:500px;">"СЛЪНЧЕВ ИЗГРЕВ"</h1>
+    <br />
+    <img src="https://z.cdrst.com/foto/hotel-sf/48af/granderesp/dit-evrika-beach-club-hotel-all-inclusive-exterior-f80ee4a.jpg" style="width:30%; margin-left:720px;" />
 </div>
