--- a/SlunchevIzgrev/Views/Shared/_Layout.cshtml
+++ b/SlunchevIzgrev/Views/Shared/_Layout.cshtml
@@ -9,15 +9,15 @@
     <link rel="stylesheet" href="~/SlunchevIzgrev.styles.css" asp-append-version="true" />
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
-            <div class="container-fluid">
+    <header style="background-color:#D3D3D3;">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" style="color:#D3D3D3;">
+            <div class="container-fluid" style="background-color:#D3D3D3;">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">SlunchevIzgrev</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
+                <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between" style="background-color:#D3D3D3;">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
@@ -34,6 +34,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">Reservations</a>
                         </li>
+                            <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="AboutUs">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Contacts">Contacts</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
@@ -46,9 +52,9 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="background-color:#D3D3D3;">
         <div class="container">
-            &copy; 2023 - SlunchevIzgrev - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+           - HOTEL SLUNCHEV IZGREV 2023 &copy; 
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
